Updated for Presampling API to save data and all other apis will only save thier specific analysis, cleaner approach
